# ingrain_server

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.base_amd64  Dockerfile.base_arm64  Dockerfile.base_cpu  Dockerfile.base_cuda  LICENSE  README.md  app.py  benchmark.py  build_base_images.sh  build_images.sh  docker-compose-cpu.yml  docker-compose.yml  export_clip_preprocessors.py  hello.sh  inference_server.py  model_server.py  pyproject.toml  pytest.ini  remove_model.py  requirements.txt  run_inference_server.sh  run_server.sh  run_triton_server.sh  run_triton_server_dev.sh  start.sh  supervisord.conf  test_client.py
.github/: pull_request_template.md
.github/workflows/: code-style-check.yml  docker-build.yml  static.yml  test-build.yml  tests.yml
docs/: mkdocs.yml  requirements.txt
docs/docs/: configuration.md  getting_started.md  index.md  inference_server.md  model_server.md
docs/site/: 404.html  index.html
docs/site/getting_started/: index.html
docs/site/inference_server/: index.html
docs/site/model_server/: index.html
docs/site/search/: search_index.json
examples/image_classification/: README.md  app.py
examples/image_classification/templates/: index.html
examples/image_search/: .gitignore  README.md  app.py  index_data.py
examples/image_search/templates/: index.html
examples/text_search/: .gitignore  README.md  app.py  get_data.sh  index_data.py
examples/text_search/templates/: index.html
inference/: common.py  custom_model_utils.py  model_cache.py  model_client.py  on_start.py  request_models.py  similarity.py
inference/api_models/: request_models.py  response_models.py
inference/triton_open_clip/: clip_converting.py  clip_model.py  open_clip_wrappers.py
inference/triton_sentence_transformers/: sentence_transformer_converting.py  sentence_transformer_model.py
inference/triton_timm/: timm_converting.py  timm_model.py
inference_old/api_models/: request_models.py
inference_old/triton_open_clip/: clip_model.py
inference_old/triton_sentence_transformers/: sentence_transformer_converting.py  sentence_transformer_model.py
ingrain_common/: common.py  pyproject.toml
ingrain_inference/api_models/: request_models.py
ingrain_inference/inference/: common.py  inference_client.py  model_cache.py
ingrain_inference_server/: Dockerfile  hello.sh  inference_server.py  pyproject.toml  start.sh
ingrain_inference_server/ingrain_common/: common.py
ingrain_inference_server/ingrain_inference/api_models/: request_models.py  response_models.py
ingrain_inference_server/ingrain_inference/inference/: inference_client.py  model_cache.py
ingrain_inference_server/ingrain_inference/inference/preprocessors/: image_preprocessor.py  text_preprocessor.py
ingrain_inference_server/ingrain_inference/inference/triton_open_clip/: clip_inference.py
ingrain_inference_server/ingrain_inference/inference/triton_sentence_transformers/: sentence_transformer_inference.py
ingrain_inference_server/ingrain_inference/inference/triton_timm/: timm_inference.py
ingrain_model_server/: Dockerfile  hello.sh  model_server.py  pyproject.toml  start.sh
ingrain_model_server/ingrain_common/: common.py
ingrain_model_server/ingrain_models/api_models/: camel_model.py  request_models.py  response_models.py
ingrain_model_server/ingrain_models/models/: custom_model_utils.py  model_client.py  model_optimisation.py  torchvision_transform_conversion.py
ingrain_model_server/ingrain_models/models/triton_open_clip/: clip_converting.py  clip_model.py  open_clip_wrappers.py
ingrain_model_server/ingrain_models/models/triton_open_clip/preprocessors/: RN50x16.json  ViT-B-16-SigLIP2.json  ViT-B-32-SigLIP2-256.json  ViT-L-14-CLIPA.json  ViT-L-16-SigLIP-256.json  ViTamin-L2-384.json
ingrain_model_server/ingrain_models/models/triton_open_clip/tokenizer_tools/: export_tokenizer.py
ingrain_model_server/ingrain_models/models/triton_sentence_transformers/: sentence_transformer_converting.py  sentence_transformer_model.py
ingrain_model_server/ingrain_models/models/triton_timm/: timm_converting.py  timm_model.py  timm_wrappers.py
ingrain_models/api_models/: request_models.py  response_models.py
ingrain_models/models/: model_client.py  model_optimisation.py  torchvision_transform_conversion.py
src/: inference_server.py  model_server.py
src/inference/: model_cache.py
tests/: conftest.py  test_clip_architectures.py  test_commons.py  test_correctness.py  test_custom_model_loading.py  test_image_preprocessor.py  test_integration.py  test_model_cache.py  test_third_party_clip_correctness.py  test_third_party_timm_correctness.py  test_timm_correctness.py
(+55 files in other folders)
