[project]
name = "ingrain-server"
version = "0.1.0"
description = "Dev tools for Repo"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "numpy>=2.3.1",
    "open-clip-torch>=2.32.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "certifi>=2025.7.14",
    "fastapi==0.116.1",
    "hf-transfer==0.1.9",
    "onnx==1.18.0",
    "onnxconverter-common>=1.13.0",
    "onnxoptimizer>=0.3.13",
    "onnxscript>=0.3.2",
    "orjson==3.11.0",
    "pillow==11.3.0",
    "pycurl==7.45.6",
    "pydantic==2.11.7",
    "timm==1.0.17",
    "tokenizers==0.21.2",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "transformers==4.53.2",
    "sentence-transformers==5.0.0",
    "tritonclient[grpc]>=2.58.0",
    "uvicorn==0.35.0",
    "validators==0.35.0",
]
