[project]
name = "ingrain-server"
version = "0.1.0"
description = "Dev tools for Repo"
readme = "README.md"
dependencies = [
    "ftfy>=6.3.1",
]

[dependency-groups]
dev = [
    "numpy>=2.3.2",
    "open-clip-torch>=3.1.0",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "certifi>=2025.8.3",
    "fastapi==0.116.1",
    "hf-transfer==0.1.9",
    "onnx==1.19.0",
    "onnxconverter-common>=1.16.0",
    "onnxoptimizer>=0.3.13",
    "onnxscript>=0.4.0",
    "orjson==3.11.3",
    "pillow==11.3.0",
    "pycurl==7.45.6",
    "pydantic==2.11.7",
    "timm==1.0.19",
    "tokenizers==0.22.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "transformers==4.56.0",
    "sentence-transformers==5.1.0",
    "tritonclient[grpc]>=2.60.0",
    "uvicorn==0.35.0",
    "validators==0.35.0",
    "ingrain",
    "distro>=1.9.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]